theme toggle switch

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,6 +13,7 @@
 // interactive components
 @import "./styles/components/interactive/buttons/linkButton.scss";
 @import "./styles/components/interactive/buttons/downloadButton.scss";
+@import "./styles/components/interactive/switches/themeSwitch.scss";
 
 // layout components
 @import "./styles/components/layout/header.scss";
