--- a/src/styles/components/layout/navigation.scss
+++ b/src/styles/components/layout/navigation.scss
@@ -102,6 +102,7 @@ nav {
       padding: 0.25rem 0;
       opacity: 0;
       backdrop-filter: blur(25px);
+      align-items: center;
 
       .link_button {
         max-width: 60px;
