--- a/src/styles/components/animations/darkmode/stars.scss
+++ b/src/styles/components/animations/darkmode/stars.scss
@@ -9,6 +9,32 @@
   }
 }
 
+@keyframes animShootingStar {
+  from {
+    transform: translateY(0px) translateX(0px) rotate(-45deg);
+    opacity: 1;
+    height: 5px;
+  }
+  to {
+    transform: translateY(40vh) translateX(40vw) rotate(-45deg);
+    opacity: 1;
+    height: 40vh;
+  }
+}
+
+@keyframes animShootingStar-2 {
+  from {
+    transform: translateY(0px) translateX(0px) rotate(-45deg);
+    opacity: 1;
+    height: 5px;
+  }
+  to {
+    transform: translateY(20vh) translateX(20vw) rotate(-45deg);
+    opacity: 1;
+    height: 40vh;
+  }
+}
+
 // n is number of stars required
 @function multiple-box-shadow($n) {
   $xValue: 1500;
@@ -26,6 +52,37 @@ $shadows-small: multiple-box-shadow(700);
 $shadows-medium: multiple-box-shadow(200);
 $shadows-big: multiple-box-shadow(100);
 
+.background:not(#work) {
+  .shooting-star {
+    z-index: 2;
+    width: 1px;
+    height: 50px;
+    border-bottom-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+    position: absolute;
+    top: 0;
+    left: 20vw;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0), white);
+    animation: animShootingStar 3s linear infinite;
+    -webkit-transition: all 2000ms linear;
+    transition: all 2000ms linear;
+  }
+
+  .shooting-star-2 {
+    z-index: 2;
+    width: 1px;
+    height: 50px;
+    border-bottom-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+    position: absolute;
+    top: 0;
+    left: 40vw;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0), white);
+    animation: animShootingStar-2 2s linear infinite;
+    -webkit-transition: all 2000ms linear;
+    transition: all 2000ms linear;
+  }
+}
 .stars_container {
   position: fixed;
   top: 0;
@@ -50,6 +107,6 @@ $shadows-big: multiple-box-shadow(100);
   }
 
   @include for-size(desktop-up) {
-    @include transform(scale(1.3));
+    @include transform(scale(1.5));
   }
 }
