--- a/src/styles/components/scene/scene.scss
+++ b/src/styles/components/scene/scene.scss
@@ -1,4 +1,4 @@
-.background.dark {
+.background {
     // moon
     .moon {
         @include width-height(300px, 300px);
@@ -24,32 +24,23 @@
         z-index: 0;
     }
 
-    // page move in-out
-    &#work {
-        .trees {
-            @include transform(translateY(100%));
-        }
-
-        .campfire_container .campfire {
-            @include transform(translateY(1000px));
-        }
-
-        .moon {
-            @include transform(translateY(-0%));
-        }
+    .midground {
+        @include width-height($width: 100%, $height: 40%);
+        @include transition($time-in: 1.2s, $time-out: 1.2s);
+        @include transform(translateY(0%));
+        position: fixed;
+        z-index: 5;
+        right: 0;
+        bottom: 0;
     }
 
-    &:not(#work) {
-        .trees {
-            @include transform(translateY(0%));
-        }
-
-        .campfire_container .campfire {
-            @include transform(translateY(0px));
-        }
-
-        .moon {
-            @include transform(translateY(-100%));
-        }
+    .foreground {
+        @include width-height($width: 100%, $height: 20%);
+        @include transition($time-in: 1.2s, $time-out: 1.2s);
+        @include transform(translateY(0%));
+        position: fixed;
+        z-index: 10;
+        right: 0;
+        bottom: 0;
     }
 }
