dark theme colors now exist in their own file. Cleaned up some animations

--- a/src/App.scss
+++ b/src/App.scss
@@ -17,6 +17,7 @@
 @import "./styles/components/interactive/buttons/button.scss";
 @import "./styles/components/interactive/buttons/linkButton.scss";
 @import "./styles/components/interactive/buttons/downloadButton.scss";
+@import "./styles/components/interactive/buttons/submitButton.scss";
 @import "./styles/components/interactive/switches/themeSwitch.scss";
 
 // layout components
