--- a/src/styles/components/interactive/buttons/button.scss
+++ b/src/styles/components/interactive/buttons/button.scss
@@ -27,7 +27,7 @@
             @include transform(scale(1.2));
         }
 
-        &:before {
+        &:not([class*="submit_button"]):before {
             @include transition;
             opacity: 1;
         }
