--- a/src/styles/pages/main.scss
+++ b/src/styles/pages/main.scss
@@ -1,6 +1,6 @@
 @import "../imports";
 
-.background#home, .background[id] {
+.background#home, .background[id=""] {
     main.content {
         margin: 2rem 10%;
         column-gap: 2rem;
