--- a/src/styles/components/interactive/buttons/linkButton.scss
+++ b/src/styles/components/interactive/buttons/linkButton.scss
@@ -5,29 +5,30 @@
     text-decoration: none;
   }
 
-  &.github a::before {
+  &:before {
+    width: 0;
+  }
+
+  &.github:hover::before {
     width: 90px;
+  }
+  &.linkedin:hover::before {
+    width: 103px;
+  }
+  &.app:hover::before {
+    width: 85px;
+  }
+  &.site:hover::before {
+    width: 100px;
   }
 
   &.card_button {
-    i.fa-github {
-      font-size: 21px;
-    }
-    i.fa-external-link {
-      font-size: 20px;
+    &:before {
+      margin-top: 2.5rem;
     }
 
-    &.github a:hover::before {
-      width: 80px;
-    }
-    &.app a:hover::before {
-      width: 85px;
-    }
-    &.site a:hover::before {
-      width: 95px;
-    }
-    &.link a:hover::before {
-      width: 90px;
+    &:hover::before {
+      width: 100px;
     }
   }
 }
