--- a/src/styles/pages/contact.scss
+++ b/src/styles/pages/contact.scss
@@ -10,59 +10,14 @@
 
     form {
         border-radius: 4px;
-        background-color: rgba(72, 72, 72, 0.4);
         padding: 35px 35px 30px 35px;
         width: 80%;
 
-        input,
+        input:not([type="submit"]),
         textarea {
-            @include font($color: $offBlack, $size: 13px, $weight: 500);
+            @include font($size: 13px, $weight: 500);
             margin-bottom: 0.75rem;
             padding: 0.5rem 1rem;
-        }
-
-        .submit_button {
-            @include flex($direction: row);
-            @include border-outline(
-                $noOutline: true,
-                $borderStyle: solid,
-                $borderWidth: 1px,
-                $borderColor: $moonSilver,
-                $borderRadius: 4px
-            );
-            @include transition($time-in: 250ms, $time-out: 250ms);
-            @include transform(scale(100%));
-            background-color: transparent;
-            align-items: baseline;
-            max-width: min-content;
-            cursor: pointer;
-            margin-top: 1rem;
-
-            * {
-                cursor: pointer;
-            }
-
-            > input {
-                @include border-outline($noOutline: true, $noBorder: true);
-                @include font($color: $moonSilver, $size: 18px, $weight: 300, $decoration: none);
-                background-color: transparent;
-                margin: 0;
-            }
-
-            > i {
-                @include font($color: $moonSilver, $size: 16px, $weight: 700, $decoration: none);
-                padding-right: 15px;
-            }
-
-            &:hover {
-                background-color: $moonSilver;
-                @include transform(scale(105%), $important: true);
-
-                input,
-                i {
-                    color: $nightBlue;
-                }
-            }
         }
 
         textarea {
