--- a/src/styles/components/scene/scene.scss
+++ b/src/styles/components/scene/scene.scss
@@ -1,4 +1,5 @@
 .background {
+    
     // moon
     .moon {
         @include width-height(300px, 300px);
@@ -16,31 +17,42 @@
     // trees background
     .trees {
         @include width-height($width: 100%, $height: 100%);
-        @include transition($time-in: 1.2s, $time-out: 1.2s);
+        @include transition($for: transform,$time-in: 1.2s, $time-out: 1.2s);
+        @include transition($for: filter, $time-in: 0.5s, $time-out: 0.5s);
         @include transform(translateY(0%));
         position: fixed;
         background-image: url("../../../assets/treeline.svg");
         background-size: cover;
         z-index: 0;
+        // TO DO: figure out how to incorporate these trees!
+        display: none;
     }
 
     .midground {
         @include width-height($width: 100%, $height: 40%);
-        @include transition($time-in: 1.2s, $time-out: 1.2s);
+        @include transition($time-in: 0.9s, $time-out: 0.9s);
         @include transform(translateY(0%));
         position: fixed;
         z-index: 5;
         right: 0;
         bottom: 0;
+
+        svg path {
+            @include transition($time-in: 0.8s, $time-out: 0.8s);
+        }
     }
 
     .foreground {
         @include width-height($width: 100%, $height: 20%);
-        @include transition($time-in: 1.2s, $time-out: 1.2s);
+        @include transition($time-in: 1s, $time-out: 1s);
         @include transform(translateY(0%));
         position: fixed;
         z-index: 10;
         right: 0;
         bottom: 0;
+
+        svg path {
+            @include transition($time-in: 0.5s, $time-out: 0.8s);
+        }
     }
 }
