--- a/src/styles/components/layout/wrapper.scss
+++ b/src/styles/components/layout/wrapper.scss
@@ -7,9 +7,11 @@
   position: fixed;
   background-color: #010b12;
 
-  > .wrapper[id] {
+  > .wrapper[id]:not(#work) {
     position: relative;
     z-index: 10;
+    height: 100%;
+    padding-top: 15%;
   }
 
   // trees background
@@ -33,7 +35,7 @@
   // contact page
   .contact_container {
     @include flex(row);
-    margin: 5rem 10%;
+    margin: 0 10%;
     width: 60%;
     column-gap: 4rem;
     min-height: 40rem;
