--- a/src/styles/components/layout/header.scss
+++ b/src/styles/components/layout/header.scss
@@ -51,6 +51,7 @@
       h1 {
         text-shadow: 2px 2px 12px rgba(0, 0, 0, 0.1);
         margin-bottom: 0;
+        margin-top: 0;
         line-height: 64px;
       }
     }
